# monkey_interpreter

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake-format.yaml
.github/workflows/: ci.yml
apps/: CMakeLists.txt
apps/exec/: CMakeLists.txt  main.cpp
apps/exec/resources/: example.monkey
apps/repl/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/: eval.hpp  exec.hpp  fmt_enum.hpp  lexer.hpp  node.hpp  object.hpp  parser.hpp  repl.hpp  string_hash.hpp  token.hpp  trace.hpp
lib/include/mlang/: eval.hpp  exec.hpp  fmt_enum.hpp  ilexer.hpp  lexer.hpp  node.hpp  object.hpp  parser.hpp  raii_wrapper.hpp  repl.hpp  string_hash.hpp  token.hpp
lib/src/: eval.cpp  exec.cpp  lexer.cpp  node.cpp  object.cpp  parser.cpp  repl.cpp
test/: CMakeLists.txt
test/unit/: eval.tst.cpp  lexer.tst.cpp  parser.tst.cpp
